--- a/Matching engine .ipynb
+++ b/Matching engine .ipynb
@@ -2,9 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  ClientID   Currencies PositionCheck  Rating\n",
+      "0        A      USD,SGD             Y       1\n",
+      "1        B  USD,SGD,JPY             N       2\n",
+      "2        C          SGD             Y       3\n",
+      "3        D          USD             Y       4\n",
+      "4        E          SGD             N       5\n",
+      "  InstrumentID Currency  LotSize\n",
+      "0          SIA      SGD      100\n",
+      "  InstrumentID Currency  LotSize\n",
+      "0          SIA      SGD      100\n"
+     ]
+    }
+   ],
    "source": [
     "# Read Excel files\n",
     "\n",
@@ -28,8 +45,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
