Add matching policy (WIP)

--- a/Matching engine .ipynb
+++ b/Matching engine .ipynb
@@ -2,30 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
+   "id": "491d844f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "import pandas as pd\n",
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Clients\n",
       "  ClientID   Currencies PositionCheck  Rating\n",
       "0        A      USD,SGD             Y       1\n",
       "1        B  USD,SGD,JPY             N       2\n",
       "2        C          SGD             Y       3\n",
       "3        D          USD             Y       4\n",
       "4        E          SGD             N       5\n",
+      "Instruments\n",
       "  InstrumentID Currency  LotSize\n",
       "0          SIA      SGD      100\n",
-      "  InstrumentID Currency  LotSize\n",
-      "0          SIA      SGD      100\n"
+      "Orders\n",
+      "        Time OrderID Instrument  Quantity Client   Price  Side\n",
+      "0   09:00:01      A1        SIA      1500      A  Market   Buy\n",
+      "1   09:02:00      B1        SIA      4500      B    32.1  Sell\n",
+      "2   09:05:00      C1        SIA       100      C      32   Buy\n",
+      "3   09:10:00      D1        SIA       300      D  Market  Sell\n",
+      "4   09:29:01      B2        SIA         5      B    32.1  Sell\n",
+      "5   09:29:02      E1        SIA      1000      E      32  Sell\n",
+      "6   09:29:03      A2        SIA       800      A    31.9   Buy\n",
+      "7   09:30:01      C2        SIA       100      C  Market  Sell\n",
+      "8   09:40:00      B3        SIA       500      B    32.2  Sell\n",
+      "9   10:50:00      C3        SIA      4200      C    32.2   Buy\n",
+      "10  11:10:00      B4        SIA       100      B  Market  Sell\n",
+      "11  12:30:00      E2        SIA       600      E    31.9   Buy\n",
+      "12  13:50:00      B5        SIA      1000      B      31  Sell\n",
+      "13  16:00:01      C4        SIA       600      C      32  Sell\n",
+      "14  16:01:00      B6        SIA       100      B    32.1  Sell\n",
+      "15  16:05:00      A3        SIA       300      A    31.9   Buy\n",
+      "16  16:09:59      E3        SIA      2000      E    31.8   Buy\n"
      ]
     }
    ],
    "source": [
     "# Read Excel files\n",
-    "\n",
-    "import pandas as pd\n",
     "\n",
     "#  To change\n",
     "folder_path = \"DataSets/example-set/\"\n",
@@ -34,13 +63,304 @@
     "df_instruments = pd.read_csv(folder_path + 'input_instruments.csv')\n",
     "df_orders = pd.read_csv(folder_path + 'input_orders.csv')\n",
     "\n",
+    "for i in df_orders.index:\n",
+    "    # df_orders[\"Time\"][i] = datetime.datetime.strptime(df_orders[\"Time\"][i] , \"%H:%M:%S\").time()\n",
+    "    df_orders.loc[i, \"Time\"] = datetime.datetime.strptime(df_orders[\"Time\"][i] , \"%H:%M:%S\").time()\n",
+    "\n",
+    "print(\"Clients\")\n",
     "print(df_clients.to_string())\n",
+    "\n",
+    "print(\"Instruments\")\n",
     "print(df_instruments.to_string())\n",
-    "print(df_instruments.to_string())\n",
+    "\n",
+    "print(\"Orders\")\n",
+    "print(df_orders.to_string())\n",
     "\n",
     "# To read ColumnName\n",
     "# print(df['ColumnName'].to_string())\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "e0b7d9bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<__main__.Client object at 0x000001A122A97450>, <__main__.Client object at 0x000001A122A9CFD0>, <__main__.Client object at 0x000001A122A9D250>, <__main__.Client object at 0x000001A122A9E290>, <__main__.Client object at 0x000001A122A9FC50>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Client:\n",
+    "    def __init__(self, client_id, currencies, position_check, rating):\n",
+    "        self.client_id = client_id\n",
+    "        self.currencies =currencies\n",
+    "        self.position_check = position_check\n",
+    "        self.rating = rating\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"{Client}: \" + self.__dict__.__str__()\n",
+    "    \n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return self.__str__()\n",
+    "\n",
+    "clients = []\n",
+    "\n",
+    "for i in df_clients.index:\n",
+    "    clients.append(Client(\n",
+    "        df_clients[\"ClientID\"][i],\n",
+    "        df_clients[\"Currencies\"][i],\n",
+    "        df_clients[\"PositionCheck\"][i],\n",
+    "        df_clients[\"Rating\"][i]\n",
+    "    ))\n",
+    "\n",
+    "print(clients)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "2e05d2d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Open\n",
+      "       Time OrderID Instrument Quantity Client   Price  Side\n",
+      "0  09:00:01      A1        SIA     1500      A  Market   Buy\n",
+      "1  09:02:00      B1        SIA     4500      B    32.1  Sell\n",
+      "2  09:05:00      C1        SIA      100      C      32   Buy\n",
+      "3  09:10:00      D1        SIA      300      D  Market  Sell\n",
+      "4  09:29:01      B2        SIA        5      B    32.1  Sell\n",
+      "5  09:29:02      E1        SIA     1000      E      32  Sell\n",
+      "6  09:29:03      A2        SIA      800      A    31.9   Buy\n",
+      "CT\n",
+      "       Time OrderID Instrument Quantity Client   Price  Side\n",
+      "0  09:30:01      C2        SIA      100      C  Market  Sell\n",
+      "1  09:40:00      B3        SIA      500      B    32.2  Sell\n",
+      "2  10:50:00      C3        SIA     4200      C    32.2   Buy\n",
+      "3  11:10:00      B4        SIA      100      B  Market  Sell\n",
+      "4  12:30:00      E2        SIA      600      E    31.9   Buy\n",
+      "5  13:50:00      B5        SIA     1000      B      31  Sell\n",
+      "Close\n",
+      "       Time OrderID Instrument Quantity Client Price  Side\n",
+      "0  16:00:01      C4        SIA      600      C    32  Sell\n",
+      "1  16:01:00      B6        SIA      100      B  32.1  Sell\n",
+      "2  16:05:00      A3        SIA      300      A  31.9   Buy\n",
+      "3  16:09:59      E3        SIA     2000      E  31.8   Buy\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Matching policy\n",
+    "\n",
+    "# Sort by time\n",
+    "df_orders.sort_values(by=[\"Time\"])\n",
+    "# print(df_orders.to_string())\n",
+    "\n",
+    "# Seperate by time\n",
+    "\n",
+    "# Open auction (09:00 - 09:30)\n",
+    "df_orders_open = pd.DataFrame(columns=df_orders.columns)\n",
+    "\n",
+    "for i in df_orders.index:\n",
+    "    if (df_orders['Time'][i] < datetime.datetime.strptime(\"9:30:00\", \"%H:%M:%S\").time()):\n",
+    "        df_orders_open = df_orders_open._append(df_orders.iloc[i], ignore_index = True)\n",
+    "\n",
+    "# Continuous trading (09:30 - 16:00)\n",
+    "df_orders_ct = pd.DataFrame(columns=df_orders.columns)\n",
+    "\n",
+    "for i in df_orders.index:\n",
+    "    if (datetime.datetime.strptime(\"9:30:00\", \"%H:%M:%S\").time()\n",
+    "        <= df_orders['Time'][i]\n",
+    "        < datetime.datetime.strptime(\"16:00:00\", \"%H:%M:%S\").time()\n",
+    "    ):\n",
+    "        df_orders_ct = df_orders_ct._append(df_orders.iloc[i], ignore_index = True)\n",
+    "\n",
+    "# Close auction (16:00 - 16:10)\n",
+    "df_orders_close = pd.DataFrame(columns=df_orders.columns)\n",
+    "\n",
+    "for i in df_orders.index:\n",
+    "    if (df_orders['Time'][i] >= datetime.datetime.strptime(\"16:00:00\", \"%H:%M:%S\").time()):\n",
+    "        df_orders_close = df_orders_close._append(df_orders.iloc[i], ignore_index=True)\n",
+    "\n",
+    "\n",
+    "print(\"Open\")\n",
+    "print(df_orders_open)\n",
+    "\n",
+    "print(\"CT\")\n",
+    "print(df_orders_ct)\n",
+    "\n",
+    "print(\"Close\")\n",
+    "print(df_orders_close)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "8c4bca2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SIA\n",
+      "Open\n",
+      "       Time OrderID Instrument Quantity Client   Price Side\n",
+      "0  09:00:01      A1        SIA     1500      A  Market  Buy\n",
+      "1  09:05:00      C1        SIA      100      C      32  Buy\n",
+      "2  09:29:03      A2        SIA      800      A    31.9  Buy\n",
+      "       Time OrderID Instrument Quantity Client   Price  Side\n",
+      "0  09:02:00      B1        SIA     4500      B    32.1  Sell\n",
+      "1  09:10:00      D1        SIA      300      D  Market  Sell\n",
+      "2  09:29:01      B2        SIA        5      B    32.1  Sell\n",
+      "3  09:29:02      E1        SIA     1000      E      32  Sell\n",
+      "\n",
+      "CT\n",
+      "       Time OrderID Instrument Quantity Client Price Side\n",
+      "0  10:50:00      C3        SIA     4200      C  32.2  Buy\n",
+      "1  12:30:00      E2        SIA      600      E  31.9  Buy\n",
+      "       Time OrderID Instrument Quantity Client   Price  Side\n",
+      "0  09:30:01      C2        SIA      100      C  Market  Sell\n",
+      "1  09:40:00      B3        SIA      500      B    32.2  Sell\n",
+      "2  11:10:00      B4        SIA      100      B  Market  Sell\n",
+      "3  13:50:00      B5        SIA     1000      B      31  Sell\n",
+      "\n",
+      "Close\n",
+      "       Time OrderID Instrument Quantity Client Price Side\n",
+      "0  16:05:00      A3        SIA      300      A  31.9  Buy\n",
+      "1  16:09:59      E3        SIA     2000      E  31.8  Buy\n",
+      "       Time OrderID Instrument Quantity Client Price  Side\n",
+      "0  16:00:01      C4        SIA      600      C    32  Sell\n",
+      "1  16:01:00      B6        SIA      100      B  32.1  Sell\n",
+      "\n",
+      "---\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create order book for each instrument\n",
+    "\n",
+    "order_book = {}\n",
+    "\n",
+    "# order_book[<instrumentID>][<currency>]\n",
+    "\n",
+    "for i in df_instruments.index:\n",
+    "    instrumentID = df_instruments[\"InstrumentID\"][i]\n",
+    "\n",
+    "    # Create entry in order book for instrument if not exists\n",
+    "    if instrumentID not in order_book:\n",
+    "        order_book[instrumentID] = {\n",
+    "            \"open\": {\n",
+    "                \"Buy\": pd.DataFrame(columns=df_orders.columns),\n",
+    "                \"Sell\": pd.DataFrame(columns=df_orders.columns)\n",
+    "            },\n",
+    "            \"ct\": {\n",
+    "                \"Buy\": pd.DataFrame(columns=df_orders.columns),\n",
+    "                \"Sell\": pd.DataFrame(columns=df_orders.columns)\n",
+    "            },\n",
+    "            \"close\": {\n",
+    "                \"Buy\": pd.DataFrame(columns=df_orders.columns),\n",
+    "                \"Sell\": pd.DataFrame(columns=df_orders.columns)\n",
+    "            },\n",
+    "        }\n",
+    "        \n",
+    "        # {\n",
+    "        #     \"Buy\": {\n",
+    "        #         \"open\": pd.DataFrame(columns=df_orders.columns),\n",
+    "        #         \"ct\": pd.DataFrame(columns=df_orders.columns),\n",
+    "        #         \"close\": pd.DataFrame(columns=df_orders.columns)\n",
+    "        #     },\n",
+    "        #     \"Sell\": {\n",
+    "        #         \"open\": pd.DataFrame(columns=df_orders.columns),\n",
+    "        #         \"ct\": pd.DataFrame(columns=df_orders.columns),\n",
+    "        #         \"close\": pd.DataFrame(columns=df_orders.columns)\n",
+    "        #     }\n",
+    "        # }\n",
+    "    \n",
+    "\n",
+    "    # Add order to the appropriate order book\n",
+    "    for i in df_orders_open.index:\n",
+    "        if df_orders_open[\"Instrument\"][i] == instrumentID:\n",
+    "            side = df_orders_open[\"Side\"][i]\n",
+    "            order_book[instrumentID][\"open\"][side] = order_book[instrumentID][\"open\"][side]._append(df_orders_open.iloc[i], ignore_index=True)\n",
+    "\n",
+    "    for i in df_orders_ct.index:\n",
+    "        if df_orders_ct[\"Instrument\"][i] == instrumentID:\n",
+    "            side = df_orders_ct[\"Side\"][i]\n",
+    "            order_book[instrumentID][\"ct\"][side] = order_book[instrumentID][\"ct\"][side]._append(df_orders_ct.iloc[i], ignore_index=True)\n",
+    "\n",
+    "    for i in df_orders_close.index:\n",
+    "        if df_orders_close[\"Instrument\"][i] == instrumentID:\n",
+    "            side = df_orders_close[\"Side\"][i]\n",
+    "            order_book[instrumentID][\"close\"][side] = order_book[instrumentID][\"close\"][side]._append(df_orders_close.iloc[i], ignore_index=True)\n",
+    "\n",
+    "\n",
+    "for instrumentID in order_book.keys():\n",
+    "    print(instrumentID)\n",
+    "    print(\"Open\")\n",
+    "    print(order_book[instrumentID][\"open\"][\"Buy\"])\n",
+    "    print(order_book[instrumentID][\"open\"][\"Sell\"])\n",
+    "    print(\"\")\n",
+    "\n",
+    "    print(\"CT\")\n",
+    "    print(order_book[instrumentID][\"ct\"][\"Buy\"])\n",
+    "    print(order_book[instrumentID][\"ct\"][\"Sell\"])\n",
+    "    print(\"\")\n",
+    "\n",
+    "    print(\"Close\")\n",
+    "    print(order_book[instrumentID][\"close\"][\"Buy\"])\n",
+    "    print(order_book[instrumentID][\"close\"][\"Sell\"])\n",
+    "    print(\"\")\n",
+    "\n",
+    "    print(\"---\")\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "c399a517",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Time OrderID Instrument Quantity Client   Price Side\n",
+      "0  09:00:01      A1        SIA     1500      A  Market  Buy\n",
+      "1  09:05:00      C1        SIA      100      C      32  Buy\n",
+      "2  09:29:03      A2        SIA      800      A    31.9  Buy\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sort the order books\n",
+    "def sort_df(df):\n",
+    "    if df.empty:\n",
+    "        return df\n",
+    "    \n",
+    "    # Sort by time\n",
+    "    df.sort_values(by=[\"Time\"])\n",
+    "\n",
+    "    # Sort by client rating\n",
+    "    df.sort_values(by=[\"\"])\n",
+    "\n",
+    "    print(df)\n",
+    "\n",
+    "    # if df[\"Side\"][0] == \"Buy\":\n",
+    "        \n",
+    "sort_df(order_book[\"SIA\"][\"open\"][\"Buy\"])"
    ]
   }
  ],
