--- a/Matching engine .ipynb
+++ b/Matching engine .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "id": "491d844f",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -33,15 +33,15 @@
       "0          SIA      SGD      100\n",
       "Orders\n",
       "        Time OrderID Instrument  Quantity Client   Price  Side\n",
-      "0   09:00:01      A1        SIA      1500      A  Market   Buy\n",
-      "1   09:02:00      B1        SIA      4500      B    32.1  Sell\n",
-      "2   09:05:00      C1        SIA       100      C      32   Buy\n",
-      "3   09:10:00      D1        SIA       300      D  Market  Sell\n",
-      "4   09:29:01      B2        SIA         5      B    32.1  Sell\n",
-      "5   09:29:02      E1        SIA      1000      E      32  Sell\n",
-      "6   09:29:03      A2        SIA       800      A    31.9   Buy\n",
-      "7   09:30:01      C2        SIA       100      C  Market  Sell\n",
-      "8   09:40:00      B3        SIA       500      B    32.2  Sell\n",
+      "0    9:00:01      A1        SIA      1500      A  Market   Buy\n",
+      "1    9:02:00      B1        SIA      4500      B    32.1  Sell\n",
+      "2    9:05:00      C1        SIA       100      C      32   Buy\n",
+      "3    9:10:00      D1        SIA       300      D  Market  Sell\n",
+      "4    9:29:01      B2        SIA         5      B    32.1  Sell\n",
+      "5    9:29:02      E1        SIA      1000      E      32  Sell\n",
+      "6    9:29:03      A2        SIA       800      A    31.9   Buy\n",
+      "7    9:30:01      C2        SIA       100      C  Market  Sell\n",
+      "8    9:40:00      B3        SIA       500      B    32.2  Sell\n",
       "9   10:50:00      C3        SIA      4200      C    32.2   Buy\n",
       "10  11:10:00      B4        SIA       100      B  Market  Sell\n",
       "11  12:30:00      E2        SIA       600      E    31.9   Buy\n",
@@ -63,9 +63,9 @@
     "df_instruments = pd.read_csv(folder_path + 'input_instruments.csv')\n",
     "df_orders = pd.read_csv(folder_path + 'input_orders.csv')\n",
     "\n",
-    "for i in df_orders.index:\n",
-    "    # df_orders[\"Time\"][i] = datetime.datetime.strptime(df_orders[\"Time\"][i] , \"%H:%M:%S\").time()\n",
-    "    df_orders.loc[i, \"Time\"] = datetime.datetime.strptime(df_orders[\"Time\"][i] , \"%H:%M:%S\").time()\n",
+    "# for i in df_orders.index:\n",
+    "#     # df_orders[\"Time\"][i] = datetime.datetime.strptime(df_orders[\"Time\"][i] , \"%H:%M:%S\").time()\n",
+    "#     df_orders.loc[i, \"Time\"] = datetime.datetime.strptime(df_orders[\"Time\"][i] , \"%H:%M:%S\").time()\n",
     "\n",
     "print(\"Clients\")\n",
     "print(df_clients.to_string())\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "id": "e0b7d9bc",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<__main__.Client object at 0x000001A122A97450>, <__main__.Client object at 0x000001A122A9CFD0>, <__main__.Client object at 0x000001A122A9D250>, <__main__.Client object at 0x000001A122A9E290>, <__main__.Client object at 0x000001A122A9FC50>]\n"
+      "[{Client}: {'client_id': 'A', 'currencies': 'USD,SGD', 'position_check': 'Y', 'rating': 1}, {Client}: {'client_id': 'B', 'currencies': 'USD,SGD,JPY', 'position_check': 'N', 'rating': 2}, {Client}: {'client_id': 'C', 'currencies': 'SGD', 'position_check': 'Y', 'rating': 3}, {Client}: {'client_id': 'D', 'currencies': 'USD', 'position_check': 'Y', 'rating': 4}, {Client}: {'client_id': 'E', 'currencies': 'SGD', 'position_check': 'N', 'rating': 5}]\n"
      ]
     }
    ],
@@ -107,7 +107,7 @@
     "        return \"{Client}: \" + self.__dict__.__str__()\n",
     "    \n",
     "\n",
-    "    def __repr__(self) -> str:\n",
+    "    def __repr__(self):\n",
     "        return self.__str__()\n",
     "\n",
     "clients = []\n",
@@ -121,6 +121,59 @@
     "    ))\n",
     "\n",
     "print(clients)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "4798249e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<__main__.Order object at 0x000001A122CAF850>, <__main__.Order object at 0x000001A122CAE650>, <__main__.Order object at 0x000001A122CAF9D0>, <__main__.Order object at 0x000001A122CAD550>, <__main__.Order object at 0x000001A122CAF910>, <__main__.Order object at 0x000001A122CAFAD0>, <__main__.Order object at 0x000001A122CAFA10>, <__main__.Order object at 0x000001A122CAFA50>, <__main__.Order object at 0x000001A122CAFC50>, <__main__.Order object at 0x000001A122CAFB50>, <__main__.Order object at 0x000001A122CAFF10>, <__main__.Order object at 0x000001A122CAFC10>, <__main__.Order object at 0x000001A122CAFD10>, <__main__.Order object at 0x000001A122CAFC90>, <__main__.Order object at 0x000001A122CAFE50>, <__main__.Order object at 0x000001A122CAFED0>, <__main__.Order object at 0x000001A122CAFF50>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Order:\n",
+    "    def __init__(self, time, order_id, client, instrument, side, price, quantity):\n",
+    "        self.time = time\n",
+    "        self.order_id = order_id\n",
+    "        self.client = client\n",
+    "        self.instrument = instrument\n",
+    "        self.side = side\n",
+    "        self.price = price\n",
+    "        self.quantity = quantity\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"{Client}: \" + self.__dict__.__str__()\n",
+    "    \n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return self.__str__()\n",
+    "\n",
+    "orders = []\n",
+    "\n",
+    "for i in df_orders.index:\n",
+    "    # df_orders[\"Time\"][i] = datetime.datetime.strptime(df_orders[\"Time\"][i] , \"%H:%M:%S\").time()\n",
+    "    orders.append(\n",
+    "        Order(\n",
+    "            datetime.datetime.strptime(df_orders[\"Time\"][i], \"%H:%M:%S\").time(),\n",
+    "            df_orders[\"OrderID\"][i],\n",
+    "            df_orders[\"Client\"][i],\n",
+    "            df_orders[\"Instrument\"][i],\n",
+    "            df_orders[\"Side\"][i],\n",
+    "            df_orders[\"Price\"][i],\n",
+    "            df_orders[\"Quantity\"][i],\n",
+    "        )\n",
+    "    )\n",
+    "    # df_orders.loc[i, \"Time\"] = datetime.datetime.strptime(df_orders[\"Time\"][i] , \"%H:%M:%S\").time()\n",
+    "\n",
+    "print(orders)\n",
+    "        "
    ]
   },
   {
