Add Instrument class

--- a/Matching engine .ipynb
+++ b/Matching engine .ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -74,11 +74,7 @@
     "print(df_instruments.to_string())\n",
     "\n",
     "print(\"Orders\")\n",
-    "print(df_orders.to_string())\n",
-    "\n",
-    "# To read ColumnName\n",
-    "# print(df['ColumnName'].to_string())\n",
-    "\n"
+    "print(df_orders.to_string())"
    ]
   },
   {
@@ -125,7 +121,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
+   "id": "a5e150bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{Instrument}: {'instrumentID': 'SIA', 'currency': 'SGD', 'lotsize': 100}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Instrument:\n",
+    "    def __init__(self, instrumentID, currency, lotsize):\n",
+    "        self.instrumentID = instrumentID\n",
+    "        self.currency =currency\n",
+    "        self.lotsize = lotsize\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"{Instrument}: \" + self.__dict__.__str__()\n",
+    "    \n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return self.__str__()\n",
+    "\n",
+    "instruments = []\n",
+    "\n",
+    "for i in df_instruments.index:\n",
+    "    instruments.append(Instrument(\n",
+    "        df_instruments[\"InstrumentID\"][i],\n",
+    "        df_instruments[\"Currency\"][i],\n",
+    "        df_instruments[\"LotSize\"][i]\n",
+    "    ))\n",
+    "\n",
+    "print(instruments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "id": "4798249e",
    "metadata": {},
    "outputs": [
@@ -133,7 +169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<__main__.Order object at 0x000001A122CAF850>, <__main__.Order object at 0x000001A122CAE650>, <__main__.Order object at 0x000001A122CAF9D0>, <__main__.Order object at 0x000001A122CAD550>, <__main__.Order object at 0x000001A122CAF910>, <__main__.Order object at 0x000001A122CAFAD0>, <__main__.Order object at 0x000001A122CAFA10>, <__main__.Order object at 0x000001A122CAFA50>, <__main__.Order object at 0x000001A122CAFC50>, <__main__.Order object at 0x000001A122CAFB50>, <__main__.Order object at 0x000001A122CAFF10>, <__main__.Order object at 0x000001A122CAFC10>, <__main__.Order object at 0x000001A122CAFD10>, <__main__.Order object at 0x000001A122CAFC90>, <__main__.Order object at 0x000001A122CAFE50>, <__main__.Order object at 0x000001A122CAFED0>, <__main__.Order object at 0x000001A122CAFF50>]\n"
+      "[{Client}: {'time': datetime.time(9, 0, 1), 'order_id': 'A1', 'client': 'A', 'instrument': 'SIA', 'side': 'Buy', 'price': 'Market', 'quantity': 1500}, {Client}: {'time': datetime.time(9, 2), 'order_id': 'B1', 'client': 'B', 'instrument': 'SIA', 'side': 'Sell', 'price': '32.1', 'quantity': 4500}, {Client}: {'time': datetime.time(9, 5), 'order_id': 'C1', 'client': 'C', 'instrument': 'SIA', 'side': 'Buy', 'price': '32', 'quantity': 100}, {Client}: {'time': datetime.time(9, 10), 'order_id': 'D1', 'client': 'D', 'instrument': 'SIA', 'side': 'Sell', 'price': 'Market', 'quantity': 300}, {Client}: {'time': datetime.time(9, 29, 1), 'order_id': 'B2', 'client': 'B', 'instrument': 'SIA', 'side': 'Sell', 'price': '32.1', 'quantity': 5}, {Client}: {'time': datetime.time(9, 29, 2), 'order_id': 'E1', 'client': 'E', 'instrument': 'SIA', 'side': 'Sell', 'price': '32', 'quantity': 1000}, {Client}: {'time': datetime.time(9, 29, 3), 'order_id': 'A2', 'client': 'A', 'instrument': 'SIA', 'side': 'Buy', 'price': '31.9', 'quantity': 800}, {Client}: {'time': datetime.time(9, 30, 1), 'order_id': 'C2', 'client': 'C', 'instrument': 'SIA', 'side': 'Sell', 'price': 'Market', 'quantity': 100}, {Client}: {'time': datetime.time(9, 40), 'order_id': 'B3', 'client': 'B', 'instrument': 'SIA', 'side': 'Sell', 'price': '32.2', 'quantity': 500}, {Client}: {'time': datetime.time(10, 50), 'order_id': 'C3', 'client': 'C', 'instrument': 'SIA', 'side': 'Buy', 'price': '32.2', 'quantity': 4200}, {Client}: {'time': datetime.time(11, 10), 'order_id': 'B4', 'client': 'B', 'instrument': 'SIA', 'side': 'Sell', 'price': 'Market', 'quantity': 100}, {Client}: {'time': datetime.time(12, 30), 'order_id': 'E2', 'client': 'E', 'instrument': 'SIA', 'side': 'Buy', 'price': '31.9', 'quantity': 600}, {Client}: {'time': datetime.time(13, 50), 'order_id': 'B5', 'client': 'B', 'instrument': 'SIA', 'side': 'Sell', 'price': '31', 'quantity': 1000}, {Client}: {'time': datetime.time(16, 0, 1), 'order_id': 'C4', 'client': 'C', 'instrument': 'SIA', 'side': 'Sell', 'price': '32', 'quantity': 600}, {Client}: {'time': datetime.time(16, 1), 'order_id': 'B6', 'client': 'B', 'instrument': 'SIA', 'side': 'Sell', 'price': '32.1', 'quantity': 100}, {Client}: {'time': datetime.time(16, 5), 'order_id': 'A3', 'client': 'A', 'instrument': 'SIA', 'side': 'Buy', 'price': '31.9', 'quantity': 300}, {Client}: {'time': datetime.time(16, 9, 59), 'order_id': 'E3', 'client': 'E', 'instrument': 'SIA', 'side': 'Buy', 'price': '31.8', 'quantity': 2000}]\n"
      ]
     }
    ],
@@ -174,6 +210,17 @@
     "\n",
     "print(orders)\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "258d613b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class OrderBook:\n",
+    "#     def "
    ]
   },
   {
