Fix sorting function

--- a/Matching engine .ipynb
+++ b/Matching engine .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 252,
    "id": "491d844f",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 254,
    "id": "e0b7d9bc",
    "metadata": {},
    "outputs": [
@@ -110,6 +110,7 @@
     "\n",
     "clients = []\n",
     "\n",
+    "# Add clients\n",
     "for i in df_clients.index:\n",
     "    clients.append(Client(\n",
     "        df_clients[\"ClientID\"][i],\n",
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 255,
    "id": "f7b1bf98",
    "metadata": {},
    "outputs": [
@@ -151,6 +152,7 @@
     "\n",
     "instruments = []\n",
     "\n",
+    "# Add instruments\n",
     "for i in df_instruments.index:\n",
     "    instruments.append(Instrument(\n",
     "        df_instruments[\"InstrumentID\"][i],\n",
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 256,
    "id": "4798249e",
    "metadata": {},
    "outputs": [
@@ -196,24 +198,19 @@
     "orders = []\n",
     "\n",
     "for i in df_orders.index:\n",
-    "    # df_orders[\"Time\"][i] = datetime.datetime.strptime(df_orders[\"Time\"][i] , \"%H:%M:%S\").time()\n",
     "    client = [c for c in clients if c.client_id == df_orders[\"Client\"][i]][0]\n",
-    "    # instrument = [i for i in instruments if i.instrumentID == df_orders[\"Instrument\"][i]][0]\n",
     "\n",
     "    orders.append(\n",
     "        Order(\n",
     "            datetime.datetime.strptime(df_orders[\"Time\"][i], \"%H:%M:%S\").time(),\n",
     "            df_orders[\"OrderID\"][i],\n",
-    "            # df_orders[\"Client\"][i],\n",
     "            client,\n",
     "            df_orders[\"Instrument\"][i],\n",
-    "            # instrument,\n",
     "            df_orders[\"Side\"][i],\n",
     "            df_orders[\"Price\"][i],\n",
     "            df_orders[\"Quantity\"][i],\n",
     "        )\n",
     "    )\n",
-    "    # df_orders.loc[i, \"Time\"] = datetime.datetime.strptime(df_orders[\"Time\"][i] , \"%H:%M:%S\").time()\n",
     "\n",
     "print(orders)\n",
     "        "
@@ -221,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 257,
    "id": "77b1255a",
    "metadata": {},
    "outputs": [],
@@ -238,7 +235,7 @@
     "            order = self.orders[side]\n",
     "            order.sort(key=lambda o : o.time)\n",
     "            order.sort(key=lambda o : o.client.rating)\n",
-    "            order.sort(key=lambda o : float('inf') if o.price == \"Market\" else o.price, reverse=True)\n",
+    "            order.sort(key=lambda o : float('inf') if o.price == \"Market\" else o.price, reverse=side == \"buy\")\n",
     "\n",
     "        return self\n",
     "\n",
@@ -260,15 +257,12 @@
     "    \n",
     "\n",
     "    def __repr__(self):\n",
-    "        return self.__str__()\n",
-    "\n",
-    "\n",
-    "# print(OrderBook(orders).sort_orders())"
+    "        return self.__str__()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 258,
    "id": "c7b8d7ad",
    "metadata": {},
    "outputs": [
@@ -276,19 +270,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "REJECTED - INVALID LOT SIZE\n",
-      "REJECTED - INVALID LOT SIZE\n",
-      "REJECTED - MISMATCH CURRENCY\n",
-      "REJECTED - INVALID LOT SIZE\n",
-      "REJECTED - INVALID LOT SIZE\n",
-      "REJECTED - INVALID LOT SIZE\n",
-      "REJECTED - INVALID LOT SIZE\n",
-      "REJECTED - INVALID LOT SIZE\n",
-      "REJECTED - INVALID LOT SIZE\n",
-      "REJECTED - INVALID LOT SIZE\n",
-      "REJECTED - INVALID LOT SIZE\n",
-      "REJECTED - INVALID LOT SIZE\n",
-      "[{Order}: {'time': datetime.time(9, 5), 'order_id': 'C1', 'client': {Client}: {'client_id': 'C', 'currencies': 'SGD', 'position_check': True, 'rating': 3, 'positions': {}}, 'instrument': 'SIA', 'side': 'Buy', 'price': 32.0, 'quantity': 100.0}, {Order}: {'time': datetime.time(9, 29, 1), 'order_id': 'B2', 'client': {Client}: {'client_id': 'B', 'currencies': 'USD,SGD,JPY', 'position_check': False, 'rating': 2, 'positions': {}}, 'instrument': 'SIA', 'side': 'Sell', 'price': 32.1, 'quantity': 5.0}, {Order}: {'time': datetime.time(9, 30, 1), 'order_id': 'C2', 'client': {Client}: {'client_id': 'C', 'currencies': 'SGD', 'position_check': True, 'rating': 3, 'positions': {}}, 'instrument': 'SIA', 'side': 'Sell', 'price': 'Market', 'quantity': 100.0}, {Order}: {'time': datetime.time(11, 10), 'order_id': 'B4', 'client': {Client}: {'client_id': 'B', 'currencies': 'USD,SGD,JPY', 'position_check': False, 'rating': 2, 'positions': {}}, 'instrument': 'SIA', 'side': 'Sell', 'price': 'Market', 'quantity': 100.0}, {Order}: {'time': datetime.time(16, 1), 'order_id': 'B6', 'client': {Client}: {'client_id': 'B', 'currencies': 'USD,SGD,JPY', 'position_check': False, 'rating': 2, 'positions': {}}, 'instrument': 'SIA', 'side': 'Sell', 'price': 32.1, 'quantity': 100.0}]\n"
+      "3REJECTED - MISMATCH CURRENCY\n",
+      "4REJECTED - INVALID LOT SIZE\n",
+      "[{Order}: {'time': datetime.time(9, 0, 1), 'order_id': 'A1', 'client': {Client}: {'client_id': 'A', 'currencies': 'USD,SGD', 'position_check': True, 'rating': 1, 'positions': {}}, 'instrument': 'SIA', 'side': 'Buy', 'price': 'Market', 'quantity': 1500.0}, {Order}: {'time': datetime.time(9, 2), 'order_id': 'B1', 'client': {Client}: {'client_id': 'B', 'currencies': 'USD,SGD,JPY', 'position_check': False, 'rating': 2, 'positions': {}}, 'instrument': 'SIA', 'side': 'Sell', 'price': 32.1, 'quantity': 4500.0}, {Order}: {'time': datetime.time(9, 5), 'order_id': 'C1', 'client': {Client}: {'client_id': 'C', 'currencies': 'SGD', 'position_check': True, 'rating': 3, 'positions': {}}, 'instrument': 'SIA', 'side': 'Buy', 'price': 32.0, 'quantity': 100.0}, {Order}: {'time': datetime.time(9, 29, 2), 'order_id': 'E1', 'client': {Client}: {'client_id': 'E', 'currencies': 'SGD', 'position_check': False, 'rating': 5, 'positions': {}}, 'instrument': 'SIA', 'side': 'Sell', 'price': 32.0, 'quantity': 1000.0}, {Order}: {'time': datetime.time(9, 29, 3), 'order_id': 'A2', 'client': {Client}: {'client_id': 'A', 'currencies': 'USD,SGD', 'position_check': True, 'rating': 1, 'positions': {}}, 'instrument': 'SIA', 'side': 'Buy', 'price': 31.9, 'quantity': 800.0}, {Order}: {'time': datetime.time(9, 30, 1), 'order_id': 'C2', 'client': {Client}: {'client_id': 'C', 'currencies': 'SGD', 'position_check': True, 'rating': 3, 'positions': {}}, 'instrument': 'SIA', 'side': 'Sell', 'price': 'Market', 'quantity': 100.0}, {Order}: {'time': datetime.time(9, 40), 'order_id': 'B3', 'client': {Client}: {'client_id': 'B', 'currencies': 'USD,SGD,JPY', 'position_check': False, 'rating': 2, 'positions': {}}, 'instrument': 'SIA', 'side': 'Sell', 'price': 32.2, 'quantity': 500.0}, {Order}: {'time': datetime.time(10, 50), 'order_id': 'C3', 'client': {Client}: {'client_id': 'C', 'currencies': 'SGD', 'position_check': True, 'rating': 3, 'positions': {}}, 'instrument': 'SIA', 'side': 'Buy', 'price': 32.2, 'quantity': 4200.0}, {Order}: {'time': datetime.time(11, 10), 'order_id': 'B4', 'client': {Client}: {'client_id': 'B', 'currencies': 'USD,SGD,JPY', 'position_check': False, 'rating': 2, 'positions': {}}, 'instrument': 'SIA', 'side': 'Sell', 'price': 'Market', 'quantity': 100.0}, {Order}: {'time': datetime.time(12, 30), 'order_id': 'E2', 'client': {Client}: {'client_id': 'E', 'currencies': 'SGD', 'position_check': False, 'rating': 5, 'positions': {}}, 'instrument': 'SIA', 'side': 'Buy', 'price': 31.9, 'quantity': 600.0}, {Order}: {'time': datetime.time(13, 50), 'order_id': 'B5', 'client': {Client}: {'client_id': 'B', 'currencies': 'USD,SGD,JPY', 'position_check': False, 'rating': 2, 'positions': {}}, 'instrument': 'SIA', 'side': 'Sell', 'price': 31.0, 'quantity': 1000.0}, {Order}: {'time': datetime.time(16, 0, 1), 'order_id': 'C4', 'client': {Client}: {'client_id': 'C', 'currencies': 'SGD', 'position_check': True, 'rating': 3, 'positions': {}}, 'instrument': 'SIA', 'side': 'Sell', 'price': 32.0, 'quantity': 600.0}, {Order}: {'time': datetime.time(16, 1), 'order_id': 'B6', 'client': {Client}: {'client_id': 'B', 'currencies': 'USD,SGD,JPY', 'position_check': False, 'rating': 2, 'positions': {}}, 'instrument': 'SIA', 'side': 'Sell', 'price': 32.1, 'quantity': 100.0}, {Order}: {'time': datetime.time(16, 5), 'order_id': 'A3', 'client': {Client}: {'client_id': 'A', 'currencies': 'USD,SGD', 'position_check': True, 'rating': 1, 'positions': {}}, 'instrument': 'SIA', 'side': 'Buy', 'price': 31.9, 'quantity': 300.0}, {Order}: {'time': datetime.time(16, 9, 59), 'order_id': 'E3', 'client': {Client}: {'client_id': 'E', 'currencies': 'SGD', 'position_check': False, 'rating': 5, 'positions': {}}, 'instrument': 'SIA', 'side': 'Buy', 'price': 31.8, 'quantity': 2000.0}]\n"
      ]
     }
    ],
@@ -301,18 +285,18 @@
     "        idx_of_instrument = [i.instrumentID for i in instruments].index(order.instrument)\n",
     "        # \"REJECTED - INSTRUMENT NOT FOUND\"\n",
     "        if idx_of_instrument < 0:\n",
-    "            print(\"REJECTED - INSTRUMENT NOT FOUND\")\n",
+    "            print(str(idx) + \"REJECTED - INSTRUMENT NOT FOUND\")\n",
     "            continue\n",
     "\n",
     "        instrumentID = instruments[idx_of_instrument]\n",
     "        # \"REJECTED - MISMATCH CURRENCY\"\n",
     "        if instruments[idx_of_instrument].currency not in order.client.currencies:\n",
-    "            print(\"REJECTED - MISMATCH CURRENCY\")\n",
+    "            print(str(idx) + \"REJECTED - MISMATCH CURRENCY\")\n",
     "            continue\n",
     "\n",
     "        # \"REJECTED - INVALID LOT SIZE\"\n",
-    "        if instruments[idx_of_instrument].lotsize % order.quantity != 0:\n",
-    "            print(\"REJECTED - INVALID LOT SIZE\")\n",
+    "        if order.quantity % instruments[idx_of_instrument].lotsize != 0:\n",
+    "            print(str(idx) + \"REJECTED - INVALID LOT SIZE\")\n",
     "            continue\n",
     "        \n",
     "        # \"REJECTED - POSITION CHECK FAILED\"\n",
@@ -330,7 +314,7 @@
     "\n",
     "def validate_position(order):\n",
     "        \"REJECTED - POSITION CHECK FAILED\"\n",
-    "        if order.client.position_check and order.client.positions.get(order.instrument, 0) - order.quantity < 0:\n",
+    "        if order.client.position_check and order.side == \"Sell\" and order.client.positions.get(order.instrument, 0) - order.quantity < 0:\n",
     "            print(\"REJECTED - POSITION CHECK FAILED\")\n",
     "            return False\n",
     "        return True"
@@ -338,7 +322,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 259,
+   "id": "1d5bac62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
    "id": "7e9354af",
    "metadata": {},
    "outputs": [
@@ -346,9 +340,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'SIA': ---{OrderBook}---\n",
+      "-buy\n",
+      "{Order}: {'time': datetime.time(9, 29, 3), 'order_id': 'A2', 'client': {Client}: {'client_id': 'A', 'currencies': 'USD,SGD', 'position_check': True, 'rating': 1, 'positions': {}}, 'instrument': 'SIA', 'side': 'Buy', 'price': 31.9, 'quantity': 800.0}\n",
+      "{Order}: {'time': datetime.time(9, 5), 'order_id': 'C1', 'client': {Client}: {'client_id': 'C', 'currencies': 'SGD', 'position_check': True, 'rating': 3, 'positions': {}}, 'instrument': 'SIA', 'side': 'Buy', 'price': 32.0, 'quantity': 100.0}\n",
+      "{Order}: {'time': datetime.time(9, 0, 1), 'order_id': 'A1', 'client': {Client}: {'client_id': 'A', 'currencies': 'USD,SGD', 'position_check': True, 'rating': 1, 'positions': {}}, 'instrument': 'SIA', 'side': 'Buy', 'price': 'Market', 'quantity': 1500.0}\n",
+      "-sell\n",
+      "{Order}: {'time': datetime.time(9, 29, 2), 'order_id': 'E1', 'client': {Client}: {'client_id': 'E', 'currencies': 'SGD', 'position_check': False, 'rating': 5, 'positions': {}}, 'instrument': 'SIA', 'side': 'Sell', 'price': 32.0, 'quantity': 1000.0}\n",
+      "{Order}: {'time': datetime.time(9, 2), 'order_id': 'B1', 'client': {Client}: {'client_id': 'B', 'currencies': 'USD,SGD,JPY', 'position_check': False, 'rating': 2, 'positions': {}}, 'instrument': 'SIA', 'side': 'Sell', 'price': 32.1, 'quantity': 4500.0}---}\n",
       "REJECTED - POSITION CHECK FAILED\n",
-      "[{Order}: {'time': datetime.time(9, 29, 1), 'order_id': 'B2', 'client': {Client}: {'client_id': 'B', 'currencies': 'USD,SGD,JPY', 'position_check': False, 'rating': 2, 'positions': {}}, 'instrument': 'SIA', 'side': 'Sell', 'price': 32.1, 'quantity': 5.0}]\n"
+      "REJECTED - POSITION CHECK FAILED\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nMatching algorithm\\n'"
+      ]
+     },
+     "execution_count": 260,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -361,6 +373,7 @@
     "    if (order.time < datetime.datetime.strptime(\"9:30:00\", \"%H:%M:%S\").time()):\n",
     "        if not validate_position(order):\n",
     "            # Failed position check\n",
+    "            # print(order)\n",
     "            continue\n",
     "\n",
     "        open_orders.append(order)\n",
@@ -370,6 +383,11 @@
     "        order_book[order.instrument] = OrderBook()\n",
     "\n",
     "    order_book[order.instrument].add_order(order)\n",
+    "\n",
+    "for instrument_id in order_book:\n",
+    "    order_book[instrument_id].sort_orders()\n",
+    "    \n",
+    "print(order_book)\n",
     "\n",
     "\"\"\"\n",
     "Matching algorithm\n",
@@ -417,7 +435,7 @@
     "Matching algorithm\n",
     "\"\"\"\n",
     "\n",
-    "print(open_orders)"
+    "# print(open_orders)"
    ]
   },
   {
